[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topicflow"
version = "1.1.0"
description = "Async WebSocket pub/sub relay with live Rich dashboard and AI message digest"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "iamgeetarted", email = "marktimothydorsey@gmail.com" }]
keywords = ["websocket", "pubsub", "async", "messaging", "real-time", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "websockets>=12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.20"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov"]

[project.scripts]
topicflow = "topicflow.cli:entry_point"

[project.urls]
Homepage = "https://github.com/iamgeetarted/topicflow"

[tool.setuptools.packages.find]
where = ["."]
include = ["topicflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
